infra/k8s/auth-database-depl.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-database-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-microservice-example
      service: auth-database
  template:
    metadata:
      labels:
        app: nodejs-microservice-example
        service: auth-database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-database-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-database-storage
          persistentVolumeClaim:
            claimName: auth-database-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: auth-database-srv
spec:
  selector:
    app: nodejs-microservice-example
    service: auth-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
