infra/k8s/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-microservice-example
      service: user
  template:
    metadata:
      labels:
        app: nodejs-microservice-example
        service: user
    spec:
      containers:
        - name: nodejs-microservice-example-user
          image: kogab/nodejs-microservice-example-user

---

apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: nodejs-microservice-example
    service: user
  ports:
    - name: user
      protocol: TCP
      port: 50051
      targetPort: 50051
